infra/k8s/msposts-srv.yaml
apiVersion: v1
kind: Service
metadata: 
  name: post-srv
spec: 
  type: NodePort
  selector: 
    app: posts
  ports: 
    - name: posts
      port: 4000
      targetPort: 4000
